# leanit

./: .gitignore  README.md  build.sh  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/models/: __init__.py  llm_schemas.py  schemas.py
backend/app/services/: __init__.py  chunking.py  insight_processor.py  llm.py  orchestrator.py  transcript.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/input/: UrlInput.tsx
frontend/components/insights/: CardStack.tsx  DeepDiveSheet.tsx  InsightCard.tsx  InsightsSection.tsx  SwipeableCard.tsx  index.ts
frontend/components/layout/: Container.tsx  Header.tsx
frontend/components/loading/: AnalysisLoader.tsx  index.ts
frontend/components/results/: LeanScoreCard.tsx  ResultsView.tsx  SummaryCard.tsx  VideoMeta.tsx  index.ts
frontend/components/ui/: Badge.tsx  Button.tsx  GlassCard.tsx  ScoreGauge.tsx  index.ts
frontend/hooks/: index.ts  useAnalysis.ts  useInsightInteraction.ts
frontend/lib/: api.ts  utils.ts
frontend/types/: index.ts
