[tool.poetry]
name = "leanit-backend"
version = "0.1.0"
description = "LeanIt - Extract insights from YouTube videos"
authors = ["LeanIt Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
youtube-transcript-api = "^0.6.2"
yt-dlp = "^2024.1.0"
openai = "^1.10.0"
groq = "^0.4.0"
tiktoken = "^0.5.2"
sentence-transformers = "^2.3.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.0"
httpx = "^0.26.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
